[gd_scene load_steps=3 format=3 uid="uid://opcyosc2oaf8"]

[ext_resource type="Script" uid="uid://bwi0tm8ebuvh" path="res://game/game/GenericProjectile/generic_projectile.gd" id="1_7mlg5"]
[ext_resource type="Resource" uid="uid://uoegdrvndlkn" path="res://game/game/GenericProjectile/ProjectileSettingResources/bob_fireball.tres" id="2_4gl3i"]

[node name="GenericProjectile" type="Area2D"]
script = ExtResource("1_7mlg5")
settings = ExtResource("2_4gl3i")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
